modify Dockerfile, which aims to increase 2files

--- a/Raspberry_system/Dockerfile
+++ b/Raspberry_system/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get install -y\
 RUN pip install rpi.gpio
 RUN pip install pyserial
 
-#STEP:2 do python file (. is Sensor_app)
-ADD ./Raspberry_system/python_arduino_ctrl.py /home
+#STEP:2 do python file (. is Raspberry_system)
+ADD ./python_arduino_ctrl.py /home
 WORKDIR /home
 ENTRYPOINT ["python","python_arduino_ctrl.py"]
